cluster/apps/syncthing/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: syncthing
  labels:
    app: syncthing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: syncthing
  template:
    metadata:
      labels:
        app: syncthing
    spec:
      containers:
        - name: syncthing
          image: linuxserver/syncthing:2.1.6
          ports:
            - containerPort: 8384
              name: gui
            - containerPort: 22000
              protocol: TCP
              name: sync-tcp
            - containerPort: 22000
              protocol: UDP
              name: sync-udp
            - containerPort: 21027
              protocol: UDP
              name: discovery
          volumeMounts:
            - name: config
              mountPath: /config
            - name: data
              mountPath: /data
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: syncthing-config-pvc
        - name: data
          persistentVolumeClaim:
            claimName: syncthing-data-pvc
