cluster/apps/syncthing/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: syncthing-gui-svc
  labels:
    app: syncthing
spec:
  selector:
    app: syncthing
  ports:
    - name: gui
      port: 8384
      targetPort: 8384
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: syncthing-sync-svc
  labels:
    app: syncthing
  annotations:
    # Utilise une IP de votre pool MetalLB (ex: 192.168.1.251)
    metallb.io/address-pool: first-pool
    metallb.io/loadBalancerIPs: 192.168.1.253
spec:
  selector:
    app: syncthing
  ports:
    - name: sync-tcp
      port: 22000
      targetPort: 22000
      protocol: TCP
    - name: sync-udp
      port: 22000
      targetPort: 22000
      protocol: UDP
    - name: discovery
      port: 21027
      targetPort: 21027
      protocol: UDP
  type: LoadBalancer
