cluster/apps/syncthing/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: syncthing-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns
    external-dns.alpha.kubernetes.io/hostname: "syncthing.int.fabsys.ovh"
    external-dns.alpha.kubernetes.io/target: "192.168.1.251"
spec:
  ingressClassName: nginx-private
  rules:
    - host: syncthing.int.fabsys.ovh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: syncthing-gui-svc
                port:
                  number: 8384
  tls:
    - hosts:
        - syncthing.int.fabsys.ovh
      secretName: syncthing-tls
